spade-tests/src/snapshots/spade_tests__typeinference__backward_tuple_indexing_with_type_error_errors_nicely.snap
---
source: spade-tests/src/typeinference.rs
---
entity name(x: inv &(bool, bool)) -> int<32> {
    x#0
}

error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:2:5
  │
1 │ entity name(x: inv &(bool, bool)) -> int<32> {
  │                ----------------- Type inv &(bool, bool) inferred here
2 │     x#0
  │     ^ - Because this is a tuple index
  │     │  
  │     expected tuple, got inv &(bool, bool)
